# app-lib-rust

./: .gitignore  .releaserc.yml  Cargo.toml  README.md  build.rs  lenra-api.files.txt  load-api.sh
.github/workflows/: build_ci.yml
clients/internal_api/: Cargo.toml  README.md
clients/internal_api/examples/: abort_transaction.rs  commit_transaction.rs  create_document.rs  create_transaction.rs  delete_collection.rs  delete_document_by_id.rs  find_documents.rs  get_document_by_id.rs  get_documents.rs  update_document_by_id.rs  update_many_documents.rs
clients/internal_api/src/: lib.rs  model.rs  request.rs
clients/internal_api/src/model/: data_document.rs  data_query.rs  data_update.rs
clients/internal_api/src/request/: abort_transaction.rs  commit_transaction.rs  create_document.rs  create_transaction.rs  delete_collection.rs  delete_document_by_id.rs  find_documents.rs  get_document_by_id.rs  get_documents.rs  update_document_by_id.rs  update_many_documents.rs
docs/: generate-clients.md
generate_apis/: Cargo.toml
generate_apis/src/: main.rs
lenra-app/: Cargo.toml
lenra-app-derive/: Cargo.toml
lenra-app-derive/src/: main.rs
lenra-app/src/: api.rs  lib.rs  listener.rs  manifest.rs  view.rs
lenra-app/src/components/: json.rs  lenra.rs  mod.rs
src/: api.rs  lib.rs  listener.rs  manifest.rs  resource.rs  view.rs
src/api/: app_request.rs  internal_api.rs  lenra_components.rs  manifest.rs  mod.rs  view_response.rs
src/components/: json.rs  lenra.rs  listener_gen.rs  mod.rs
