[package]
name = "lenra-app"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "App Lib for Rust Lenra apps"
repository = "https://github.com/lenra-io/app-lib-rust"
keywords = ["lenra", "app", "lib", "api"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "lenra_app"
path = "src/lib.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.5.0", features = ["json"] }
regress = "0.7.1"
internal_api = { version = "0.1.0", path = "clients/internal_api" }

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0.106"
syn = "2.0.32"
typify = { git = "https://github.com/oxidecomputer/typify.git", branch = "main" }
regex = "1.9.5"
oapi_generator = "0.0.35"
libninja = { git = "https://github.com/kurtbuilds/libninja", version = "0.1.9" }
convert_case = "0.6.0"
