[package]
name = "generate_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0.106"
syn = "2.0.32"
typify = "0.0.15"
regex = "1.9.5"
convert_case = "0.6.0"